--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ h6 {
 }
 
 /* GENERAL IMAGES STYLES */
-.img {
+img {
   display: block;
   width: 100%;
   object-fit: cover;
@@ -137,7 +137,7 @@ h6 {
 .btn:hover {
   background-color: transparent;
   border-color: var(--color-light);
-  transform: translateT(-0.5rem);
+  transform: translateY(-0.5rem);
 }
 
 .btn.white {
@@ -164,8 +164,6 @@ h6 {
 .btn.sm {
   padding: 0.5rem 1.2rem;
 }
-
-/* GENERAL MEDIA QUERIES */
 
 /* MEDIA QUERIES (tablets) */
 @media screen and (max-width: 1024px) {
